--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,13 @@
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
 html {
-    color: #ce0000;
+    color: #e44d26;
     font-size: 1em;
     line-height: 1.4;
+
+    font-size: 16px;
+    line-height: 26px;
+    font-family: 'Roboto', sans-serif;
 }
 
 ::-moz-selection {
@@ -57,7 +61,9 @@ textarea {
    ========================================================================== */
 
 body {
-    font: 16px/26px Helvetica, Helvetica Neue, Arial;
+    font-size: 16px;
+    line-height: 26px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .wrapper {
@@ -70,22 +76,25 @@ body {
    =================== */
 
 .header-container {
-    border-bottom: 20px solid #a70101;
+    border-bottom: 20px solid #2d2d2d;
 }
 
 .footer-container,
 .main aside {
-    border-top: 20px solid #e44d26;
+    border-top: 20px solid #525252;
 }
 
 .header-container,
 .footer-container,
 .main aside {
-    background: #de0000;
+    background: #191919;
+    font-size: 16px;
+    line-height: 26px;
+    font-family: 'Oswald', sans-serif;
 }
 
 .title {
-    color: white;
+    color: #e44d26;
 }
 
 /* ==============
@@ -133,12 +142,12 @@ nav a:hover {
 }
 
 .main aside {
-    color: white;
+    color: e44d26;
     padding: 0px 5% 10px;
 }
 
 .footer-container footer {
-    color: white;
+    color: e44d26;
     padding: 20px 0;
 }
 
