--- a/css/main.css
+++ b/css/main.css
@@ -55,11 +55,6 @@ textarea {
     padding: 0.2em 0;
 }
 
-
-/* ===== Initializr Styles ==================================================
-   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
-   ========================================================================== */
-
 body {
     font-size: 16px;
     line-height: 26px;
@@ -71,12 +66,12 @@ body {
     margin: 0 5%;
 }
 
-/* ===================
-    ALL: Orange Theme
-   =================== */
-
 .header-container {
     border-bottom: 20px solid #2d2d2d;
+}
+.header-container img {
+    float: left;
+    width: 10%;
 }
 
 .footer-container,
@@ -84,13 +79,35 @@ body {
     border-top: 20px solid #525252;
 }
 
+.main-container article
+{
+  background: #191919;
+  padding: 5px;
+  border: 5px solid #1d1d1d;
+}
+
 .header-container,
-.footer-container,
+.footer-container {
+  background: #191919;
+  font-size: 16px;
+  line-height: 26px;
+  font-family: 'Oswald', sans-serif;
+}
+
+.footer-container {
+  vertical-align: bottom;
+}
+
 .main aside {
     background: #191919;
-    font-size: 16px;
-    line-height: 26px;
-    font-family: 'Oswald', sans-serif;
+}
+
+.main-container {
+  margin: 5px;
+  padding: 5px;
+  background: #191919;
+  border-bottom: 20px solid #2d2d2d;
+  border-top: 20px solid #525252;
 }
 
 .title {
@@ -111,13 +128,13 @@ nav a {
     display: block;
     margin-bottom: 10px;
     padding: 15px 0;
-
     text-align: center;
     text-decoration: none;
     font-weight: bold;
 
     color: white;
     background: #e44d26;
+    border-bottom: 5px solid #ff9579;
 }
 
 nav a:hover,
@@ -158,11 +175,6 @@ nav a:hover {
 .ie7 .title {
     padding-top: 20px;
 }
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
 
 
 
