--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,22 @@ body {
   vertical-align: bottom;
 }
 
+.sketchfab-embed-wrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.sketchfab-embed-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .main aside {
     background: #191919;
 }
